@@ -83,6 +83,7 @@ AUTH_MODULE_CONFIGURATION = {
                                                                 'publickey-path': 'Surfnet/ipk.xml'},
                                                 },
                                              'always_retrieve': ['rootAll'],
+                                             'required_credentials': ['rootAll'],
                                              # With username and attributes:
                                              #  either a "path" into credentials with <credential>/<attribute>
                                              #  or a static value.
